--- a/index.html
+++ b/index.html
@@ -9,34 +9,29 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
   <link href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script type="text/script" src="https://code.jquery.com/jquery.js"></script>
-  <script type="text/script" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script type="text/script" src="assets/javascript/app.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script type="text/javascript" src="assets/javascript/app.js"></script>
 </head>
 
-<body>
+<body id="full">
   <header>
-    <h1 class="title"><span><button type="button" class="btn btn-primary start"><strong><h3>Start Game</h3></strong></button></span> <strong>Classical Music in Theatre</strong><span id="timerDisplay">00:00</span></h1>
+    <h1 class="title"><span><button type="button" class="btn btn-primary start"><strong><h3>Start Game</h3></strong></button></span> <strong>Classical Music in Theatre</strong><span id="timerDisplay">:30</span></h1>
   </header>
   <div class="main container">
-    <div class="row question">
-      <h2><strong>Who is the composer of the music you are listening to?</strong></h2>
-    </div>
-    <div class="row answers" id="a1" value="1">
-      <h2>Answer 1 goes here</h2>
-    </div>
-    <div class="row answers" id="a1" value="2">
-      <h2>Answer 2 goes here</h2>
-    </div>
-    <div class="row answers" id="a1" value="3">
-      <h2>Answer 3 goes here</h2>
-    </div>
-    <div class="row answers" id="a1" value="4">
-      <h2>Answer 4 goes here</h2>
-    </div>
+    
   </div>
-  <script>
-  </script>
+<div clas="audioFiles">
+  <audio id="TheImperialMarch" src="./assets/audio/The Imperial March.mp3" preload="auto"></audio>
+  <audio id="Superman" src="./assets/audio/Superman.mp3" preload="auto"></audio>  
+  <audio id="StarWars" src="./assets/audio/Star Wars.mp3" preload="auto"></audio>  
+  <audio id="RaidersoftheLostArk" src="./assets/audio/Raiders of the Lost Ark.mp3" preload="auto"></audio>  
+  <audio id="JurassicPark" src="./assets/audio/Jurassic Park.mp3" preload="auto"></audio>  
+  <audio id="Jaws" src="./assets/audio/Jaws.mp3" preload="auto"></audio>
+<audio id="ETtheExtraTerrestrial" src="./assets/audio/E.T. the Extra-Terrestrial.mp3" preload="auto"></audio>
+<audio id="stop" src="" preload="auto"></audio>
+
+</div>
 </body>
 
 </html>
